--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcsh 'Paris (France) -- Social life and customs -- 19th century'
 - !lcsh 'Novelists, French -- 19th century -- Diaries'
 - !lcsh 'Paris (France) -- Intellectual life -- 19th century'
+- GITenberg
 title: "Journal des Goncourt  (Deuxième volume)\r\nMémoires de la vie littéraire"
 url: http://www.gutenberg.org/ebooks/14803
